--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "concurrently": "^8.2.2",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
