--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "front": "vite",
     "back": "nodemon server",
     "build": "vite build",
+    "deploy": "gh-pages -d build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -16,6 +17,7 @@
     "concurrently": "^8.2.2",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
