--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "front": "vite",
     "back": "nodemon server",
     "build": "vite build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
